platform/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: award-travel-service
spec:
  selector:
    app: award-travel
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: LoadBalancer
